# q-email-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  email_mcp_server.py  package.json  pyproject.toml  setup.py  setup_oauth.py
email_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
email_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
q_email_mcp/: __init__.py  server.py
