[project]
name = "email-mcp"
version = "0.1.0"
description = "Email MCP Application"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.4.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=0.5.0"
]

[project.scripts]
email-mcp = "server:mcp.run"

[tool.uv]
package = true  # Enable entry point installation

